[gd_scene load_steps=4 format=2]

[ext_resource path="res://projectiles/fireball2.gd" type="Script" id=1]
[ext_resource path="res://art/whitedragon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.60647
height = 15.8958

[node name="fireball2" type="Area2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 884.924, 123.633, 35.2101, 47.2557 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.10955, 7.62939e-06 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="robbant" type="Timer" parent="."]
wait_time = 0.3
autostart = true
[connection signal="body_entered" from="." to="." method="_on_fireball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="robbant" to="." method="_on_robbant_timeout"]
